infrastructure/namespace/mspoc-todo/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mspoc-todo
  labels:
    name: mspoc-todo
