infrastructure/namespace/mspoc-todo/mspoc-todo-postgres.yml
apiVersion: v1
kind: Service
metadata:
  namespace: mspoc-todo
  name: postgres
  labels:
    app: mspoc-todo-db
spec:
  ports:
    - port: 5432
  selector:
    app: mspoc-todo-db
    # tier: database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mspoc-todo
  name: postgres
  labels:
    app: mspoc-todo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mspoc-todo-db
      # tier: database
  template:
    metadata:
      name: postgres
      labels:
        app: mspoc-todo-db
        # tier: database
    spec:
      volumes:
      - name: postgres-pv
        persistentVolumeClaim:
          claimName: postgres-pvc
      containers:
      - name: postgres
        image: postgres:9.6-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: postgres-pv
