infrastructure/namespace/mspoc-todo/mspoc-todo.yml
apiVersion: v1
kind: Service
metadata:
  namespace: mspoc-todo
  name: mspoc-todo-srv
  labels:
    app: mspoc-todo-app
spec:
  ports:
    - port: 3000
  selector:
    app: mspoc-todo-app
    # tier: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mspoc-todo
  name: mspoc-todo
spec:
  replicas: 3
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 10
      maxUnavailable: 2
  selector:
    matchLabels:
      app: mspoc-todo-app
      # tier: app
  template:
    metadata:
      name: rails
      labels:
        app: mspoc-todo-app
        # tier: app
    spec:
      containers:
      - name: rails
        image: martinmirandac/mspoc-todo:latest
        args: ["rails s -p 3000 -b 0.0.0.0"]
        ports:
          - containerPort: 3000
